--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tailwindcss -i ./src/input.css -o ./dist/style.css"
+    "build": "npx tailwindcss -i ./src/input.css -o ./dist/style.css --watch"
   },
   "author": "",
   "license": "ISC",
